--- a/report/report.html
+++ b/report/report.html
@@ -184,9 +184,9 @@
           visible: false,
           dialogVisible: false,
           data: [],
-          tableData: [{'id': 1643466583.550058, 'title': 'testcase/test_login.py::test_add_projcet', 'logs': '\n', 'result': 1, 'duration': 0.1597324, 'doc': '', 'time': '2022-01-29 22:29:43'}, {'id': 1643466583.636548, 'title': 'testcase/test_login.py::Test_Api::test_add_api', 'logs': '\n', 'result': 1, 'duration': 0.057540900000000006, 'doc': '', 'time': '2022-01-29 22:29:43'}, {'id': 1643466583.782459, 'title': 'testcase/test_login.py::Test_Api::test_edit_api', 'logs': '\n', 'result': 1, 'duration': 0.1261234000000001, 'doc': '', 'time': '2022-01-29 22:29:43'}, {'id': 1643466583.820694, 'title': 'testcase/test_login.py::Test_Api::test_del_api', 'logs': '\n', 'result': 1, 'duration': 0.023659899999999956, 'doc': '', 'time': '2022-01-29 22:29:43'}],
+          tableData: [{'id': 1643536031.8625197, 'title': 'testcase/test_login.py::test_add_projcet[yapi_login0]', 'logs': '\n', 'result': 1, 'duration': 0.028844800000000004, 'doc': '', 'time': '2022-01-30 17:47:11'}, {'id': 1643536031.9009614, 'title': 'testcase/test_login.py::test_del_project[yapi_login0]', 'logs': '\n', 'result': 1, 'duration': 0.018757400000000035, 'doc': '', 'time': '2022-01-30 17:47:11'}, {'id': 1643536032.0088885, 'title': 'testcase/test_login.py::Test_Api::test_add_api[yapi_login0]', 'logs': '\n', 'result': 1, 'duration': 0.06921559999999993, 'doc': '', 'time': '2022-01-30 17:47:12'}, {'id': 1643536032.0899856, 'title': 'testcase/test_login.py::Test_Api::test_edit_api[yapi_login0]', 'logs': '\n', 'result': 1, 'duration': 0.05400660000000013, 'doc': '', 'time': '2022-01-30 17:47:12'}, {'id': 1643536032.1315715, 'title': 'testcase/test_login.py::Test_Api::test_del_api[yapi_login0]', 'logs': '\n', 'result': 1, 'duration': 0.014720000000000066, 'doc': '', 'time': '2022-01-30 17:47:12'}, {'id': 1643536032.1947253, 'title': 'testcase/test_login.py::test_add_projcet[yapi_login1]', 'logs': '\n', 'result': 1, 'duration': 0.03621160000000012, 'doc': '', 'time': '2022-01-30 17:47:12'}, {'id': 1643536032.2338634, 'title': 'testcase/test_login.py::test_del_project[yapi_login1]', 'logs': '\n', 'result': 1, 'duration': 0.02518710000000013, 'doc': '', 'time': '2022-01-30 17:47:12'}, {'id': 1643536032.2890525, 'title': 'testcase/test_login.py::Test_Api::test_add_api[yapi_login1]', 'logs': '\n', 'result': 1, 'duration': 0.035202500000000025, 'doc': '', 'time': '2022-01-30 17:47:12'}, {'id': 1643536032.3679585, 'title': 'testcase/test_login.py::Test_Api::test_edit_api[yapi_login1]', 'logs': '\n', 'result': 1, 'duration': 0.051867099999999944, 'doc': '', 'time': '2022-01-30 17:47:12'}, {'id': 1643536032.415213, 'title': 'testcase/test_login.py::Test_Api::test_del_api[yapi_login1]', 'logs': '\n', 'result': 1, 'duration': 0.019404500000000047, 'doc': '', 'time': '2022-01-30 17:47:12'}, {'id': 1643536032.451765, 'title': 'testcase/test_login.py::test_add_projcet[yapi_login2]', 'logs': "\n('D:\\\\pycharm\\\\ApiTest\\\\testcase\\\\test_login.py', 14, 'Skipped: 访客账号没有权限,跳过该用例')", 'result': 0, 'duration': 0.00048050000000010584, 'doc': '', 'time': '2022-01-30 17:47:12'}, {'id': 1643536032.4727104, 'title': 'testcase/test_login.py::test_del_project[yapi_login2]', 'logs': "\n('D:\\\\pycharm\\\\ApiTest\\\\testcase\\\\test_login.py', 25, 'Skipped: 访客账号没有权限,跳过该用例')", 'result': 0, 'duration': 0.0005111000000002086, 'doc': '', 'time': '2022-01-30 17:47:12'}, {'id': 1643536032.5521684, 'title': 'testcase/test_login.py::Test_Api::test_add_api[yapi_login2]', 'logs': '\n', 'result': 1, 'duration': 0.055871400000000015, 'doc': '', 'time': '2022-01-30 17:47:12'}, {'id': 1643536032.567126, 'title': 'testcase/test_login.py::Test_Api::test_edit_api[yapi_login2]', 'logs': "\n('D:\\\\pycharm\\\\ApiTest\\\\testcase\\\\test_login.py', 50, 'Skipped: 访客账号没有权限,跳过该用例')", 'result': 0, 'duration': 0.0013533000000001127, 'doc': '', 'time': '2022-01-30 17:47:12'}, {'id': 1643536032.5820777, 'title': 'testcase/test_login.py::Test_Api::test_del_api[yapi_login2]', 'logs': "\n('D:\\\\pycharm\\\\ApiTest\\\\testcase\\\\test_login.py', 59, 'Skipped: 访客账号没有权限,跳过该用例')", 'result': 0, 'duration': 0.0005815000000000126, 'doc': '', 'time': '2022-01-30 17:47:12'}],
           logs:'',
-          summary: {'total': 4, 'success': 4, 'failed': 0, 'success_rate': 1.0, 'fail_rate': 0.0, 'duration': 0.36705660000000007, 'avg_duration': 0.09176415000000002},
+          summary: {'total': 15, 'success': 11, 'failed': 4, 'success_rate': 0.7333333333333333, 'fail_rate': 0.26666666666666666, 'duration': 0.4122150000000009, 'avg_duration': 0.027481000000000057},
           expands: [],
           getRowKeys (row) {
             return row.id
@@ -322,7 +322,7 @@ option = {
             color: 'auto'
         },
         data: [{
-            value: 1.0,
+            value: 0.7333333333333333,
             name: '执行成功率'
         }]
     }]
@@ -354,7 +354,7 @@ option = {
             name: '访问来源',
             type: 'pie',
             radius: '50%',
-            data: [{'value': 4, 'name': 'Success', 'itemStyle': {'color': '#97cc64'}}, {'value': 0, 'name': 'Failed', 'itemStyle': {'color': '#fd5a3e'}}],
+            data: [{'value': 11, 'name': 'Success', 'itemStyle': {'color': '#97cc64'}}, {'value': 4, 'name': 'Failed', 'itemStyle': {'color': '#fd5a3e'}}],
             emphasis: {
                 itemStyle: {
                     shadowBlur: 10,
